--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.geist-ui.dev/font.css');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.square {
+  border-radius: var(--radius);
+  transform: translateX(var(--x));
+  transition: all 0.4s ease;
+  position: relative;
+  /* background-color: 	#7A7A7A; */
+}
+.square::after {
+  content: '';
+  display: block;
+  transform: scale(var(--pseudo-el-after-scale));
+  transition: transform 0.3s ease-in-out;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-width: 30;
+  top: 0;
+  left: 0;
+  border-radius: inherit;
 }
